--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <style>
 </style>
 </head><body>
-<div id='root'/>
+<div id='header'></div>
+<div id='content'></div>
 </body>
 <script src='main.js'></script>
 </html>
